--- a/templates/resources.html
+++ b/templates/resources.html
@@ -3,72 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MarketMind</title>
+    <title>Resources</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 </head>
-<body class = "grad-other">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="about-header">
-      <div class="container-fluid no-left">
-        <a class="market-mind-link black" href="/">MarketMind</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse right" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="/market">Current Market</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/portfolio">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/news">News</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link page_indicator" href="/resources">Learn More</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/about">About</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-  </nav>
-      <!-- Resources Section -->
-      <div class="resources-container">
-        <h1>Resources</h1>
-        <div class="resource-item">
-            <iframe src="https://www.bankrate.com/investing/ultimate-guide-virtual-trading-stock-market-simulator/" class="resource-frame"></iframe>
-            <div class="resource-content-box">
-                <h2>Example Website</h2>
-            </div>
-        </div>
-        <div class="resource-item">
-            <iframe src="https://www.bankrate.com/investing/ultimate-guide-virtual-trading-stock-market-simulator/" class="resource-frame"></iframe>
-            <div class="resource-content-box">
-                <h2>Another Example Website</h2>
-            </div>
-        </div>
-        <!-- Add more resources as needed -->
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXlAH+b7ATyYkG0e3eM7OR7C7kxM/cB9cAOzz1sY7pDnhS3X9q6CfRjSQhlg" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGhoiN6q7VQFiF55f/FRZ6pOJpwhh0f4x0SqBiuIyiKOh7Rx00f6Efp/0Qp" crossorigin="anonymous"></script>
 
-    <!-- Chatbot Section -->
-<div class="chatbot-container">
-    <h2>AI Chatbot</h2>
-    <button id="chatbot-toggle" class="btn btn-primary">Chat!</button>
-    <div id="chat-container" class="chat-container" style="display: none;">
-        <div id="chat-box" class="chat-box"></div>
-        <form id="chat-form" class="chat-form">
-            <input type="text" id="user-input" class="form-control" placeholder="Type your message..." required>
-            <button type="submit" class="btn btn-secondary">Send</button>
-        </form>
+<body class="grad-other">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="about-header">
+        <div class="container-fluid no-left">
+          <a class="market-mind-link black" href="/">MarketMind</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse right" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="/market">Current Market</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/portfolio">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/news">News</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link page_indicator" href="/resources">Learn More</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/about">About</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+
+    <div class="container mt-5">
+        <h1>Resources</h1>
+        {% for id, title, url, summary in url_summaries %}
+        <div class="card mb-3">
+            <div class="row g-0" >
+                <div class="col-md-4" >
+                    <img src="{{ url_for('screenshot', resource_id=id) }}" class="img-fluid rounded-start" alt="Resource Image">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ title }}</h5>
+                        <p class="card-text">{{ summary }}</p>
+                        <a href="{{ url }}" class="btn btn-primary" target="_blank">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
     </div>
-</div>
-    <!-- Chatbot Section -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+
+ <!-- Chatbot Section -->
 <script>
 document.getElementById("chatbot-toggle").addEventListener("click", function() {
     var chatContainer = document.getElementById("chat-container");
@@ -105,8 +99,6 @@ document.getElementById("chat-form").addEventListener("submit", function(event) 
     .catch(error => console.error('Error:', error));
 });
 </script>
-
-
 
 </body>
 </html>
