referenced the chatbot

--- a/templates/about.html
+++ b/templates/about.html
@@ -43,7 +43,7 @@
     <main class="main-block" >
       <h1>About Us</h1>
       <div id="project-description">
-          <p>Paragraph about us as SEO and EduMarket here</p>
+          <p>MarketMind is an innovative tool created to make the stock market more accessible and less intimidating for college students, particularly those from underrepresented backgrounds. This application offers real-time data, aiding users in better understanding the market. Developed as part of the 2024 SEO Tech Developer program, MarketMind seeks to support a diverse group of students in taking their initial steps into investment.</p>
       </div>
       
       <div class="team-container">
