--- a/templates/resources.html
+++ b/templates/resources.html
@@ -43,21 +43,22 @@
     <div class="container mt-5">
         <h1>Resources</h1>
         {% for id, title, url, summary in url_summaries %}
-        <div class="card mb-3">
-            <div class="row g-0" >
-                <div class="col-md-4" >
-                    <img src="{{ url_for('screenshot', resource_id=id) }}" class="img-fluid rounded-start" alt="Resource Image">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ title }}</h5>
-                        <p class="card-text">{{ summary }}</p>
-                        <a href="{{ url }}" class="btn btn-primary" target="_blank">Read More</a>
+        <div class="card mb-3 clickable-row">
+            <a href="{{ url }}" class="stretched-link" target="_blank">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="{{ url_for('screenshot', resource_id=id) }}" class="img-fluid rounded-start" alt="Resource Image">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ title }}</h5>
+                            <p class="card-text">{{ summary }}</p>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
         </div>
-        {% endfor %}
+        {% endfor %}        
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
