--- a/templates/about.html
+++ b/templates/about.html
@@ -68,7 +68,7 @@
           <div class="team-member">
               <img src="../static/images/Matthew.jpg" alt="Matthew Espinoza">
               <h3>Matthew Espinoza</h3>
-              <p>Hey all, My name is Matthew Espinoza! I am a triple major at Pacific University where I study Computer Science, Data Science and Mathematics with a specialization in Acturial science. I graduate in May 2026 and I really enjoyed working with these individuals on this AI grader Project.</p>
+              <p>Hey all, My name is Matthew Espinoza! I am a triple major at Pacific University where I study Computer Science, Data Science and Mathematics with a specialization in Acturial science. I graduate in May 2026 and I really enjoyed working with these individuals on that project.</p>
               <div class="social-links">
                   <a href="https://linkedin.com/in/matthewespinoza" target="_blank"><i class="fa fa-linkedin"></i></a>
                   <a href="https://twitter.com/matthewespinoza" target="_blank"><i class="fa fa-twitter"></i></a>
