--- a/templates/about.html
+++ b/templates/about.html
@@ -30,7 +30,7 @@
               <a class="nav-link" href="/news">News</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/resources">Learn More</a>
+              <a class="nav-link" href="/resources">Resources</a>
             </li>
             <li class="nav-item">
               <a class="nav-link page_indicator" href="/about">About</a>
