--- a/templates/index.html
+++ b/templates/index.html
@@ -26,11 +26,12 @@
                 <a class="nav-link" id="white" href="/portfolio">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="white" href="/resources">Learn More</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" id="white" href="/news">News</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" id="white" href="/resources">Resources</a>
+              </li>
+
               <li class="nav-item">
                 <a class="nav-link" id="white" href="/about">About</a>
               </li>
@@ -44,18 +45,18 @@
           </div>
         </div>
     </nav>
-      <div class="container-fluid d-flex justify-content-between  main-block">
-          <div class="text-section">
-              <p class="left landingPageTitle white">Dive into the Stock Market with Confidence!</p>
-              <p class="left landingPageDesc white">Your Gateway to Smart Investing: Discover, Learn, and Succeed with Real-Time Market Insights!</p>
-              <div class="button">
-                <a href="/market" class="get-started-btn">Get Started</a>
-              </div>
-          </div>
-          <div class="image-section">
-            <img id="main-image" src="/static/images/graph.jpg">
+    <div class="container-fluid d-flex justify-content-between main-block">
+      <div class="text-section">
+          <p class="left landingPageTitle white">Dive into the Stock Market with Confidence!</p>
+          <p class="left landingPageDesc white">Your Gateway to Smart Investing: Discover, Learn, and Succeed with Real-Time Market Insights!</p>
+          <div class="button">
+            <a href="/market" class="get-started-btn">Get Started</a>
           </div>
       </div>
+      <div class="image-section">
+        <img id="main-image" src="/static/images/stocks3.png">
+      </div>
+  </div>
 
       {% include 'chatbot.html' %}
    
