--- a/templates/resources.html
+++ b/templates/resources.html
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="/news">News</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link page_indicator" href="/resources">Learn More</a>
+                <a class="nav-link page_indicator" href="/resources"> Resources</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
