--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MarketMind</title>
+    <title>Geeko</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,12 +14,15 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary" id="about-header">
       <div class="container-fluid no-left">
-        <a class="market-mind-link black" href="/">MarketMind</a>
+        <a class="market-mind-link black" href="/">Geeko</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse right" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="/market">Current Market</a>
             </li>
@@ -43,7 +46,7 @@
     <main class="main-block" >
       <h1>About Us</h1>
       <div id="project-description">
-          <p>MarketMind is an innovative tool created to make the stock market more accessible and less intimidating for college students, particularly those from underrepresented backgrounds. This application offers real-time data, aiding users in better understanding the market. Developed as part of the 2024 SEO Tech Developer program, MarketMind seeks to support a diverse group of students in taking their initial steps into investment.</p>
+          <p>Geeko is an innovative tool created to make the stock market more accessible and less intimidating for college students, particularly those from underrepresented backgrounds. This application offers real-time data, aiding users in better understanding the market. Developed as part of the 2024 SEO Tech Developer program, Geeko seeks to support a diverse group of students in taking their initial steps into investment.</p>
       </div>
       
       <div class="team-container">
