--- a/templates/resources.html
+++ b/templates/resources.html
@@ -14,12 +14,15 @@
 <body class="grad-other">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" id="about-header">
         <div class="container-fluid no-left">
-          <a class="market-mind-link black" href="/">MarketMind</a>
+          <a class="market-mind-link black" href="/">Geeko</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse right" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="/market">Current Market</a>
               </li>
