--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
           </div>
       </div>
       <div class="image-section">
-        <img id="main-image" src="/static/images/stocks3.png">
+        <img id="main-image" src="/static/images/graph.jpg">
       </div>
   </div>
 
