--- a/static/main.css
+++ b/static/main.css
@@ -157,12 +157,14 @@ td {
     font-size: 60px;
     font-family: "Poppins";
     line-height: 60px;
+    width: 380px;
 }
 
 .landingPageDesc {
     /* font-size: 20px; */
     font-family: "Poppins";
     line-height: 20px;
+    width: 380px;
 }
 
 .right {
@@ -197,6 +199,7 @@ td {
     padding-right: 20px;
     /* border-right: 2px solid rgb(175, 175, 175); */
     margin-right: 20px;
+    width: auto;
 
 /*check: to see if this makes our current marketplace bug    */
 /*     width: auto; */
